updted DTOs